fix: contrast for comments

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -214,6 +214,10 @@ p:last-child, ul:last-child, ol:last-child
   margin-bottom: 0
   padding-bottom: 0
 
+p:first-child, ul:first-child, ol:first-child
+  margin-top: 0
+  padding-top: 0
+
 // Stylebook/Material Design specs
 .materialFormField
   display: inline-block
